--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 	 <div class="topnav">
-	  <a class="active" href="myhome.html">Home</a>
+	  <a class="active" href="index.html">Home</a>
 	  <a href="pag2.html">Resume</a>
 	 
 	</div>
